No indication the photo was taken
No indication that photo is captured on verify photo page

ECOM-1473

--- a/lms/templates/verify_student/incourse_reverify.html
+++ b/lms/templates/verify_student/incourse_reverify.html
@@ -46,6 +46,7 @@ from verify_student.views import PayAndVerifyView
     data-checkpoint-name='${checkpoint_name}'
     data-platform-name='${platform_name}'
     data-usage-id='${usage_id}'
+    data-capture-sound='${capture_sound}'
   ></div>
   </section>
 </div>
