SOL-839 Switch labels with spans

--- a/lms/static/sass/views/_shoppingcart.scss
+++ b/lms/static/sass/views/_shoppingcart.scss
@@ -658,6 +658,8 @@ $light-border: 1px solid $gray-l5;
         cursor: text;
         width: ($baseline*60);
         word-wrap: break-word;
+        color: #3c3c3c;
+        font-family: $sans-serif;
         font-style: normal;
       }
     }
