Setting direction for shopping cart templates

--- a/lms/static/sass/views/_shoppingcart.scss
+++ b/lms/static/sass/views/_shoppingcart.scss
@@ -56,6 +56,8 @@ $light-border: 1px solid $gray-l5;
 }
 
 .confirm-enrollment {
+  @include direction();
+
   .title {
     @include text-align(left);
     @extend %t-title4;
