--- a/lms/templates/shoppingcart/registration_code_receipt.html
+++ b/lms/templates/shoppingcart/registration_code_receipt.html
@@ -83,7 +83,7 @@ from courseware.courses import course_image_url, get_course_about_section
           <a href="${course_url}" class="link-button course-link-bg-color">${_("View Course")} <i class="icon fa fa-caret-right" aria-hidden="true"></i></a>
         %elif not registered_for_course:
           <form method="post">
-            <input type="hidden" name="csrfmiddlewaretoken" value="${ csrf_token }" aria-hidden="true">
+            <input type="hidden" name="csrfmiddlewaretoken" value="${ csrf_token }">
             <button type="submit" id="id_active_course_enrollment"
                name="active_course_enrollment">${_("Activate Course Enrollment")} <i class="icon fa fa-caret-right" aria-hidden="true"></i></button>
           </form>
